--- a/languages/ml/haskell/haskell.org
+++ b/languages/ml/haskell/haskell.org
@@ -96,16 +96,17 @@ https://wiki.haskell.org/Import
 | <*  | right "facing bird"/shark | Applicative f | f a        -> f b -> f a |
 |-----+---------------------------+---------------+--------------------------|
 ** types primitives
-|---------+-------+--------------------------------------|
-| Bool    |  True | boolean                              |
-| Integer |     2 | signed integer, unbounded            |
-| Int     |     2 | signed integer, 32/64 bit            |
-| Word    |     2 | unsigned integer, 32/64 bit          |
-| Float   |   1.2 | IEEE single-precision floating-point |
-| Double  |   1.2 | IEEE double-precision floating-point |
-| Char    |   'A' | an unicode code point                |
-| String  | "foo" | list characters                      |
-|---------+-------+--------------------------------------|
+|---------+-------+--------------------------------------+------------|
+| Bool    |  True | boolean, short-circuits due laziness |            |
+| Integer |     2 | signed integer, unbounded            |            |
+| Int     |     2 | signed integer, 32/64 bit            |            |
+| Word    |     2 | unsigned integer, 32/64 bit          |            |
+| Float   |   1.2 | IEEE single-precision floating-point |            |
+| Double  |   1.2 | IEEE double-precision floating-point |            |
+| Char    |   'A' | an unicode code point                | Data.Char  |
+| String  | "foo" | list characters                      |            |
+| Ratio   | 1 % 3 |                                      | Data.Ratio |
+|---------+-------+--------------------------------------+------------|
 ** types complex
 | instancing    | possible definition        | name              | description                            |
 |---------------+----------------------------+-------------------+----------------------------------------|
@@ -408,11 +409,13 @@ https://www.cse.chalmers.se/edu/year/2018/course/TDA452_Functional_Programming/t
 |------------------+-----------------------------------+------------------------------------------------------|
 
 * Emacs Setup
-  - https://github.com/haskell/haskell-ide-engine
-  - https://github.com/soupi/minimal-haskell-emacs (setup)
-  - https://github.com/ndmitchell/ghcid "flymake"
-  - https://github.com/ndmitchell/hlint "flycheck"
-  - https://github.com/chrisdone/hindent "gofmt"
+
+- Emacs: lsp-mode, lsp-ui, lsp-haskell
+- https://github.com/haskell/haskell-ide-engine
+- https://github.com/soupi/minimal-haskell-emacs (setup)
+- https://github.com/ndmitchell/ghcid "flymake"
+- https://github.com/ndmitchell/hlint "flycheck"
+- https://github.com/chrisdone/hindent "gofmt"
 
 * Codebases
 
