--- a/languages/ml/haskell/tools/stack.org
+++ b/languages/ml/haskell/tools/stack.org
@@ -1,22 +1,31 @@
-|-------------------------+-------------------------------------------------------------------|
-|                         | description                                                       |
-|-------------------------+-------------------------------------------------------------------|
-| build                   | installs ghc, package deps and builds the project                 |
-| clean                   | cleans build artifacts                                            |
-| exec EXENAME            |                                                                   |
-| exec -- which EXE       |                                                                   |
-| exec EXE -- ARGS        | will run the EXE with ARGS                                        |
-| ghc -- -dynamic test.hs |                                                                   |
-| ghci LIB                | starts repl in LIB context                                        |
-| repl                    |                                                                   |
-| setup                   |                                                                   |
-| new NAME                |                                                                   |
-| new NAME simple         | "simple" is the most minimal of the templates that stack provides |
-| test                    |                                                                   |
-|-------------------------+-------------------------------------------------------------------|
+|-------------------------+---------------------------------------------------------------------|
+|                         | description                                                         |
+|-------------------------+---------------------------------------------------------------------|
+| init                    | creates stack.yaml, tries most recent resolver that statisfies deps |
+| build                   | installs ghc, package deps and builds the project                   |
+| clean                   | cleans build artifacts                                              |
+| exec EXENAME            |                                                                     |
+| exec -- which EXE       |                                                                     |
+| exec EXE -- ARGS        | will run the EXE with ARGS                                          |
+| ghc -- -dynamic test.hs |                                                                     |
+| ghci LIB                | starts repl in LIB context                                          |
+| repl                    |                                                                     |
+| setup                   | downloads GHC                                                       |
+| new NAME                |                                                                     |
+| new NAME simple         | "simple" is the most minimal of the templates that stack provides   |
+| test                    |                                                                     |
+|-------------------------+---------------------------------------------------------------------|
 
 - ~/.stack/config.yml
 
 - dot - get a dependency DOT graph
   https://stackoverflow.com/questions/69270620/generating-haskell-module-dependency-tree
   https://docs.haskellstack.org/en/stable/dependency_visualization/
+
+|------------+---------------------------------------------------|
+| resolver   | lts-19.6                                          |
+| packages   | [.]                                               |
+| extra-deps | []                                                |
+|            | [wonderful-0.2.1.0]                               |
+|            | [ [git: my.server/my.repo.git, commit: 167bc8 ] ] |
+|------------+---------------------------------------------------|
