--- a/languages/ml/haskell/tools/tools.org
+++ b/languages/ml/haskell/tools/tools.org
@@ -2,10 +2,10 @@
   https://github.com/haskell-hvr/cabal-plan/
   https://hackage.haskell.org/package/cabal-plan
 
-- static build
-  - https://vadosware.io/post/static-binaries-for-haskell-a-convoluted-approach/
+* static build
+- https://vadosware.io/post/static-binaries-for-haskell-a-convoluted-approach/
   - .cabal
-    #+begin_src
+    #+begin_src sh
       ghc-options: -Wall -O2 -static -threaded
       cc-options: -static
       ld-options: -static -pthread
